# amazing

amazing/: Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazegen.py  pyproject.toml
amazing/amaze/: __init__.py  config_parser.py  maze_io.py  renderer.py
